crates/kirin-derive-core/src/kirin/field/snapshots/kirin_derive_core_3__kirin__field__tests__struct_named_wrapper.snap
---
source: crates/kirin-derive-core-3/src/kirin/field/tests.rs
expression: "case!\n{\n    #[wraps] #[kirin(fn, type_lattice = T)] struct NamedWrapper<T>\n    { wrapped: InnerStruct<T>, }\n}"
---
#[automatically_derived]
impl<'a, T> kirin::ir::HasArguments<'a> for NamedWrapper<T> {
    type Iter = NamedWrapperArgumentsIter<'a, T>;
    fn arguments(&'a self) -> Self::Iter {
        let Self { wrapped } = self;
        NamedWrapperArgumentsIter {
            inner: <InnerStruct<T> as HasArguments>::arguments(wrapped),
        }
    }
}
#[automatically_derived]
pub struct NamedWrapperArgumentsIter<'a, T> {
    inner: <InnerStruct<T> as HasArguments<'a>>::Iter,
}
#[automatically_derived]
impl<'a, T> Iterator for NamedWrapperArgumentsIter<'a, T> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a, T> kirin::ir::HasArgumentsMut<'a> for NamedWrapper<T> {
    type IterMut = NamedWrapperArgumentsMutIter<'a, T>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        let Self { wrapped } = self;
        NamedWrapperArgumentsMutIter {
            inner: <InnerStruct<T> as HasArgumentsMut>::arguments_mut(wrapped),
        }
    }
}
#[automatically_derived]
pub struct NamedWrapperArgumentsMutIter<'a, T> {
    inner: <InnerStruct<T> as HasArgumentsMut<'a>>::IterMut,
}
#[automatically_derived]
impl<'a, T> Iterator for NamedWrapperArgumentsMutIter<'a, T> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
